<resources>

    <!--application name-->
    <string name="app_name">T2OrderFood</string>

    <!--slider text-->
    <string name="slider_text1">Welcome to Your Restaurant App</string>
    <string name="slider_text2">Best choice for your Restaurant Template</string>
    <string name="slider_text3">Serving of the best food</string>
    <string name="slider_text4">The perfect restaurant for your convenience</string>

    <!--navigation drawer and home menu name-->
    <string name="menu_home">Home</string>
    <string name="menu_product">Menu</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_reservation">Reservation</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_news">News</string>
    <string name="menu_location">Location</string>
    <string name="menu_social">Social</string>
    <string name="menu_info">Information</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>

    <!--title bar-->
    <string name="title_menu">Menu</string>
    <string name="title_cart">My Cart</string>
    <string name="title_checkout">My Order</string>
    <string name="title_confirm">Congratulations</string>
    <string name="title_social">Social</string>
    <string name="title_news">News</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_about">About</string>

    <!--action-->
    <string name="action_cart">My Cart</string>
    <string name="action_checkout">Reservation</string>
    <string name="action_buy">Add to Cart</string>
    <string name="action_save">Save Image</string>
    <string name="action_clear">Clear All</string>
    <string name="people">People</string>
    <string name="available">Available</string>
    <string name="sold">Sold Out</string>

    <!--location-->
    <string name="google_maps_url">https://goo.gl/maps/Rv9UuU6fNS42</string>

    <string name="contact">
        <![CDATA[
        <p>Do you still feel confused by the system that you need? Do not worry, please contact us now!
        Gladly we will help resolve your needs.</p>
        <p>Address : Menuran RT 01 RW 06, Baki, Sukoharjo, Jawa Tengah Indonesia</p>
        <p>Email : developer.solodroid@gmail.com</p>
        <p>or use the contact form provided.</p>
        ]]>
    </string>

    <string name="profile">
        <![CDATA[
        <p><b>Your Restaurant App</b> is a mobile restaurant reservation system which run under Android platform that used
        for promotion and selling your product with single application. With powerful admin panel can manage the order,
        create unlimited category and restaurant menu, also can configurations such as currency, tax, user,
        etc from admin panel on the web. you can add, update, update or change that restaurant menu,
        category, tax, currency and change admin password with generate password, etc.</p>
        <p>This application created by Android for client side and then PHP MySql for Admin side.
        Run under Android platform which is the most popular  operating system in the world.
        Using this application you can save your money and time in creating mobile restaurant reservation application.</p>
        ]]>
    </string>

    <!--message when success send reservation-->
    <string name="success_order">
        <![CDATA[
        <p><b>Congratulations,</b> your Order has been successfully sent..</p>
        ]]>
    </string>

    <!--social network-->
    <string name="social_tab1">Facebook</string>
    <string name="social_tab2">Twitter</string>
    <string name="facebook_url">https://www.facebook.com/solodroid.net</string>
    <string name="twitter_url">https://twitter.com/solodroiddev</string>

    <!--information tab name-->
    <string name="information_tab1">Profile</string>
    <string name="information_tab2">Contact</string>

    <!--network-->
    <string name="no_internet">Please, enable internet connection before using this app</string>
    <string name="failed_connect_network">Failed to connect internet!</string>
    <string name="not_found">No Menu Found!</string>

    <!--menu, cart and order-->
    <string name="search_query_text">Search&#8230;</string>
    <string name="confirm">Confirmation</string>
    <string name="number_order">Number of order : </string>
    <string name="addtocart">Add to cart ? </string>
    <string name="total_order">Total Order</string>
    <string name="clear_all_order">Do you want to clear your all order?</string>
    <string name="clear_one_order">Do you want to clear this order?</string>
    <string name="db_exist_alert">Do you want to remove your previous order?</string>
    <string name="no_order">Your Cart is Empty, Please Order first.</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>

    <!--checkout menu-->
    <string name="checkout_your_name">Your Name</string>
    <string name="checkout_table_no">Table No.</string>
    <string name="checkout_email">Your Email</string>
    <string name="checkout_set_date">Set Date</string>
    <string name="checkout_set_time">Set Time</string>
    <string name="checkout_phone_number">Phone Number</string>
    <string name="checkout_order_list">Order Detail</string>
    <string name="checkout_total_price">Total Price</string>
    <string name="checkout_add_comment">Comment</string>
    <string name="checkout_send_order">Send</string>
    <string name="form_alert">Please, complete the form first.</string>
    <string name="sending_alert">Sending data. Please wait &#8230;</string>
    <string name="ok_alert">Your Order has been successfully sent.</string>
    <string name="failed_alert">Your Order has not been sent.</string>
    <string name="order_alert">You have not ordered yet</string>
    <string name="no_order_menu">No order</string>
    <string name="txt_order">Grand Total</string>
    <string name="txt_tax">Tax :</string>
    <string name="txt_total">Total :</string>

    <!--app about information-->
    <string name="app_version">Version 2.0.0</string>
    <string name="app_copyright">Copyright &#169; 2018 Solodroid Developer \n All rights reserved</string>
    <string name="app_email">5735512068@psu.ac.th</string>
    <string name="share_summary">Share to your friends</string>
    <string name="rate_summary">Give your rate and feedback</string>
    <string name="more_summary">More apps from developer</string>
    <string name="title_app_name">Application Name</string>
    <string name="title_app_version">Build Version</string>
    <string name="title_app_email">Email</string>
    <string name="title_app_copyright">Copyright</string>
    <string name="title_app_share">Share</string>
    <string name="title_app_rate">Rate</string>
    <string name="title_app_more">More</string>
    <string name="more_apps">https://play.google.com/store/apps/developer?id=Solodroid</string>
    <string name="share_content">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>

    <!--contact us-->
    <string name="hint_email_subject">Subject :</string>
    <string name="hint_email_message">Message :</string>
    <string name="button_send">Send</string>

    <!--nav drawer header image-->
    <!--set "@string/drawer_content_on" to enable navigation drawer header image-->
    <!--set "@string/drawer_content_off" to disable navigation drawer header image-->
    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="drawer_content_on">0</string>
    <string name="news_detail">Detail</string>

</resources>