<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/sclDetail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="true"
        android:visibility="gone"
        android:scrollbars="none"
        android:layout_below="@+id/toolbar">

        <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            card_view:cardElevation="3sp"
            card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/lytContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TextInputLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp">

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/checkout_your_name"
                        android:inputType="textCapWords"
                        android:padding="10dp" >
                    </EditText>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TextInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    >

                    <EditText
                        android:id="@+id/edtTableNo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/checkout_table_no"
                        android:inputType="number"
                        android:padding="10dp" >
                    </EditText>

                </android.support.design.widget.TextInputLayout>




            </LinearLayout>


            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/TextInputLayout5"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
                <!--android:id="@+id/edtPhone"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:hint="@string/checkout_phone_number"-->
                <!--android:inputType="phone"-->
                <!--android:padding="10dp" >-->
            <!--</EditText>-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/TextInputLayout7"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
                <!--android:id="@+id/edtEmail"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:ems="10"-->
                <!--android:hint="@string/checkout_email"-->
                <!--android:inputType="textEmailAddress"-->
                <!--android:padding="10dp" >-->
            <!--</EditText>-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--<com.balysv.materialripple.MaterialRippleLayout-->
                    <!--android:id="@+id/rippleDate"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--app:mrl_rippleAlpha="0.2"-->
                    <!--app:mrl_rippleColor="@color/ripple_color"-->
                    <!--app:mrl_rippleDelayClick="true"-->
                    <!--app:mrl_rippleHover="true"-->
                    <!--app:mrl_rippleOverlay="true">-->

                <!--<Button-->
                    <!--android:id="@+id/btnDate"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@color/colorPrimary"-->
                    <!--android:text="@string/checkout_set_date"-->
                    <!--android:textColor="@color/white" />-->

                <!--</com.balysv.materialripple.MaterialRippleLayout>-->


            </RelativeLayout>



            <EditText
                android:id="@+id/edtOrderList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:textColor="@color/black"
                android:gravity="left"
                android:hint="@string/checkout_order_list"
                android:inputType="textMultiLine"
                android:padding="10dp" >
            </EditText>

            <EditText
                android:id="@+id/edtTotalPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:enabled="false"
                android:textColor="@color/black"
                android:gravity="left"
                android:hint="@string/checkout_total_price"
                android:inputType="textMultiLine"
                android:padding="10dp" >
            </EditText>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtComment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="top|left"
                android:hint="@string/checkout_add_comment"
                android:inputType="textMultiLine"
                android:padding="10dp" >
            </EditText>

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--<com.balysv.materialripple.MaterialRippleLayout-->
                <!--android:id="@+id/rippleTime"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:mrl_rippleAlpha="0.2"-->
                <!--app:mrl_rippleColor="@color/ripple_color"-->
                <!--app:mrl_rippleDelayClick="true"-->
                <!--app:mrl_rippleHover="true"-->
                <!--app:mrl_rippleOverlay="true">-->

                <!--<Button-->
                <!--android:id="@+id/btnTime"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:text="@string/checkout_set_time"-->
                <!--android:textColor="@color/white" />-->

                <!--</com.balysv.materialripple.MaterialRippleLayout>-->


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/dateText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="50dp"
                        android:gravity="right">
                    </TextView>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/timeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                    </TextView>

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>


            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/ripple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="@color/ripple_color"
                app:mrl_rippleDelayClick="true"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/btnSend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkblue"
                android:text="@string/checkout_send_order"
                android:textColor="@color/white"
                android:textStyle="bold" />

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>



    <ProgressBar
        android:id="@+id/prgLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/txtAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/failed_connect_network"
        android:visibility="gone" />

</RelativeLayout>